# netwire-graph-loader

./: README-verbose.md  README.md  graph-loader.cabal  netwire-graph-loader.cabal
etc/: graph.frag  graph.vert
graphs/: GraphEdgeInds.txt  GraphVerts.txt
src/: CtrlExample.hs  CtrlExample.lhs  GraphLoadingScr.hs  GraphProgram.hs  ReportingLoadExample.hs  ReportingProgressExample.hs  ReportingProgressExample.lhs
